Reorganizando código